--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,10 @@
 
 /* ==========HEADER BÖLÜMÜ============ */
 
+
 .header {
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
     display: flex;
@@ -96,7 +98,22 @@
     color: #2e2f42;
     padding: 76px;
     padding: 24px 0;
-}
+    position: relative;
+    color: #404bbf;
+   
+
+} 
+.menu-nav::after { 
+        content: "";
+        width: 100%;
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        height: 4px;
+        background-color: #404bbf;
+        border-radius: 2px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    }
 .menu-nav:hover {
     color: #404bbf;
 }
@@ -126,6 +143,7 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
     
 }
 .mail-phone:hover {
