--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@
         height: 4px;
         background-color: #404bbf;
         border-radius: 2px;
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 .menu-nav:hover {
     color: #404bbf;
@@ -122,7 +122,7 @@
 }
 .nav-one {
     display: flex;
-    align-items: center;
+    align-items: center !important;
 }
 .nav-ul {
     display: flex;
@@ -136,14 +136,15 @@
 
 .communication {
     font-style: normal;
-    
+    display: flex;
+    justify-content: end;
 }
 .mail-phone {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .mail-phone:hover {
@@ -165,6 +166,11 @@
     background-color: #2e2f42;
     padding: 188px 0;
     text-align: center;
+    background-image: linear-gradient (rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .main-title {
     font-size: 56px;
@@ -191,6 +197,7 @@
     border-radius: 4px;
     cursor: pointer;
     margin-top: 48px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-order:hover {
     background-color: #404BBF;
