--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@
     background-color: #2e2f42;
     padding: 188px 0;
     text-align: center;
-    background-image: linear-gradient (rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/icomoon.zip);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
