--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@
     background-color: #2e2f42;
     padding: 188px 0;
     text-align: center;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/icomoon.zip);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/people-office.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
@@ -248,6 +248,17 @@
 }
 .left-our-content {
 text-align: left;
+}
+.our-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+
 }
 
         /* ===SECTİON 3 === */ 
