--- a/css/styles.css
+++ b/css/styles.css
@@ -303,13 +303,13 @@ text-align: left;
 .icon-item {
     width: 40px;
     height: 40px;
-    border-radius: %50;
+    border-radius: 50%;
 }
 .icon-link {
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
-    border-radius: %50;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -355,10 +355,21 @@ text-align: left;
 .left-our-portfolio {
     text-align: left;
 }
-.banking-img {
+.images {
     position: relative;
     overflow: hidden;
-
+}
+p.stylish {
+    transform: translateY(0%);
+    position: absolute;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
 }
  /* ==========FOOTER BÖLÜMÜ============ */
 
