--- a/css/styles.css
+++ b/css/styles.css
@@ -359,7 +359,7 @@ text-align: left;
     position: relative;
     overflow: hidden;
 }
-p.stylish {
+.stylish {
     transform: translateY(0%);
     position: absolute;
     font-size: 16px;
@@ -370,6 +370,8 @@ p.stylish {
     background-color: #4d5ae5;
     height: 100%;
     width: 100%;
+    top: 0;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  /* ==========FOOTER BÖLÜMÜ============ */
 
@@ -389,4 +391,46 @@ p.stylish {
 .logo-footer {
     display: inline-block;
     margin-bottom: 16px;
+}
+.footer-container {
+    display: flex;
+    align-items: baseline;
+    margin-right: 120px;
+
+}
+.footer-paragraf-two {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+
+}
+.footer-list {
+    display: flex;
+    gap: 16px;
+}
+.footer-list-one {
+    width: 40px;
+    height: 40px
+}
+.footer-list-one a {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-list-one a:hover {
+    background-color: #31d0aa;
+}
+.footer-list-one a:focus {
+    background-color: #31d0aa;
+}
+.footer-icon {
+    fill: #f4f4fd;
 }
