--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@
     padding: 24px 0;
     position: relative;
     color: #404bbf;
-   
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 } 
 .menu-nav::after { 
@@ -313,7 +313,8 @@ text-align: left;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-link:hover {
     background-color: #404bbf;
@@ -339,10 +340,13 @@ text-align: left;
     flex-basis: calc((100% - 72px) / 4);
     flex: 1; 
     background-color: #ffffff;
-    box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .our-portfolio-list:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.our-portfolio-list:hover .stylish {
+    transform: translateY(0%);
 }
 
 .our-portfolio-box {
@@ -360,7 +364,7 @@ text-align: left;
     overflow: hidden;
 }
 .stylish {
-    transform: translateY(0%);
+    transform: translateY(100%);
     position: absolute;
     font-size: 16px;
     line-height: 1.5;
@@ -372,6 +376,7 @@ text-align: left;
     width: 100%;
     top: 0;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    left: 0;
 }
  /* ==========FOOTER BÖLÜMÜ============ */
 
