--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,8 @@
     width: 1158px;
     margin: 0 auto;
     flex-direction: column;
+    display: flex;
+    align-items: baseline;
 }
 
         /* ===NAV BÖLÜMÜ=== */
@@ -389,6 +391,7 @@ text-align: left;
 .footer {
     background-color: #2E2F42;
     padding: 100px 0;
+
 }
 .footer-logo-span {
     color: #F4F4FD;
@@ -398,9 +401,8 @@ text-align: left;
     margin-bottom: 16px;
 }
 .footer-container {
-    display: flex;
-    align-items: baseline;
     margin-right: 120px;
+
 
 }
 .footer-paragraf-two {
@@ -420,7 +422,7 @@ text-align: left;
     width: 40px;
     height: 40px
 }
-.footer-list-one a {
+.footer-list-one .footer-link {
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
@@ -429,13 +431,13 @@ text-align: left;
     align-items: center;
     justify-content: center;
 }
+.footer-list-one .footer-link:hover, .footer-list-one .footer-link:focus {
+    background-color: #31d0aa;
+}
 
-.footer-list-one a:hover {
-    background-color: #31d0aa;
-}
-.footer-list-one a:focus {
-    background-color: #31d0aa;
-}
 .footer-icon {
     fill: #f4f4fd;
+}
+.footer-link {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
